# csslint

./: .gitignore  AGENTS.md  Cargo.toml  LESSONS.md  README.md
.dex/: tasks.jsonl
.github/workflows/: json-output-schema-check.yml  release.yml  rust-ci.yml
crates/csslint-cli/: Cargo.toml  README.md
crates/csslint-cli/src/: main.rs
crates/csslint-cli/tests/: exit_codes_and_reporters.rs
crates/csslint-cli/tests/snapshots/: json-error.snap.json  pretty-error.snap
crates/csslint-config/: Cargo.toml  README.md
crates/csslint-config/src/: lib.rs
crates/csslint-core/: Cargo.toml  README.md
crates/csslint-core/src/: lib.rs
crates/csslint-extractor/: Cargo.toml  README.md
crates/csslint-extractor/src/: lib.rs
crates/csslint-fix/: Cargo.toml  README.md
crates/csslint-fix/src/: lib.rs
crates/csslint-parser/: Cargo.toml  README.md
crates/csslint-parser/src/: lib.rs
crates/csslint-plugin-api/: Cargo.toml  README.md
crates/csslint-plugin-api/src/: lib.rs
crates/csslint-rules/: Cargo.toml  README.md
crates/csslint-rules/src/: lib.rs  vendor_prefix_allowlist.rs
crates/csslint-semantic/: Cargo.toml  README.md
crates/csslint-semantic/src/: lib.rs
crates/csslint-test-harness/: Cargo.toml  README.md
crates/csslint-test-harness/src/: lib.rs  perf.rs  stylelint_compat.rs
crates/csslint-test-harness/tests/: determinism_parallel.rs  extractor_fixtures.rs  extractor_malformed.rs  fix_engine_overlap_matrix.rs  fix_idempotency_fixable_rules.rs  malformed_reliability.rs  modern_nested_css_regression.rs  native_component_fix_safety.rs  native_framework_fixtures.rs  native_framework_rule_behavior.rs  native_scope_truth_table.rs  nested_selector_duplicate_regression.rs  parser_integration.rs  perf_smoke.rs  rule_test_matrix_gate.rs  semantic_snapshots.rs  smoke_pipeline.rs  stylelint_compat_harness.rs  wave1_fixable_rules.rs  wave2_compatibility_rules.rs  wave3_controlled_rules.rs  wave4_framework_rules.rs
docs/: README.md  deferrals-v1.md  json-output-schema-v1.md  json-output-schema-v1.schema.json  open-questions.md  plugin-surface-v1.md  replacement-readiness-checklist.md  rule-catalog-v1.md  success-metrics.md  template-usage-fixtures-v1.md  template-usage-provider-spec-v1.md  vue-style-policy-v1.md
docs/fixtures/json-output/: invalid-fix-missing-replacement.json  invalid-missing-rule-id.json  valid-basic.json  valid-with-internal-error.json
docs/ops/: test-quality-audit-tracking.md
docs/plan/: 01-scope-and-success-criteria.md  02-workspace-and-crate-layout.md  03-extractor-and-source-mapping.md  04-parser-and-semantic-model.md  05-rule-engine.md  06-first-rule-batch.md  07-fix-engine.md  08-cli-and-config.md  09-stylelint-compatibility-harness.md  10-native-framework-suite.md  11-performance-and-hardening.md  README.md  rule-test-matrix.md
docs/rules/: README.md  no_deprecated_features.md  no_duplicate_declarations.md  no_duplicate_selectors.md  no_empty_rules.md  no_global_leaks.md  no_invalid_values.md  no_legacy_vendor_prefixes.md  no_overqualified_selectors.md  no_unknown_properties.md  no_unused_scoped_selectors.md  prefer_logical_properties.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: extractor.rs  parser_wrapper.rs  semantic_builder.rs
scripts/: build_perf_summary.py  check_internal_deps.py  check_perf_regression.py  extract_stylelint_vendor_allowlist.mjs  import_stylelint_fixtures.mjs  install.sh  refresh_perf_corpora.py  stylelint_perf_benchmark.mjs  validate_json_output_schema.py  validate_stylelint_skip_manifest.py
tests/compat/stylelint/: README.md  skip-manifest.yaml  source-pin.json  suite-map.json
tests/compat/stylelint/baseline/: compat-summary.json
tests/compat/stylelint/imported/: block-no-empty.json  declaration-block-no-duplicate-properties.json  declaration-property-value-no-unknown.json  no-duplicate-selectors.json  property-no-unknown.json  property-no-vendor-prefix.json  selector-no-qualifying-type.json  value-no-vendor-prefix.json
tests/native/: README.md
tests/native/extractor/: README.md
tests/native/extractor-malformed/: README.md  missing-script-close.vue  missing-style-close.vue  unclosed-style-open.vue  unsupported-lang.vue
tests/native/extractor/empty-style-tag/: expected.json  input.vue
tests/native/semantic/: README.md
tests/native/template-usage/: README.md
tests/perf/: README.md
tests/perf/baseline/: perf-summary.json
tests/perf/corpora/: manifest.json
(+108 files in other folders)
