[package]
name = "csslint-parser"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
csslint-core = { path = "../csslint-core" }
csslint-extractor = { path = "../csslint-extractor" }
lightningcss = { version = "1.0.0-alpha.71", optional = true }

[features]
default = ["lightning"]
lightning = ["dep:lightningcss"]
