[package]
name = "csslint-semantic"
version = "0.1.0-alpha.6"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
csslint-core = { path = "../csslint-core" }
csslint-parser = { path = "../csslint-parser" }

[dev-dependencies]
csslint-extractor = { path = "../csslint-extractor" }
