[package]
name = "csslint-test-harness"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
csslint-core = { path = "../csslint-core" }

[dev-dependencies]
csslint-extractor = { path = "../csslint-extractor" }
csslint-parser = { path = "../csslint-parser" }
csslint-rules = { path = "../csslint-rules" }
csslint-semantic = { path = "../csslint-semantic" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
